2.8.3
	* Unicode support in lexer, excl. C, C++ and Ocaml [#249]
	* Haskell: Use qualified import of AST in generated printer [#228]

2.8.2 Andreas Abel <andreas.abel@gu.se>  November 2018
	* GHC 8.4 compatibility [#227,#236]
	* bnfc now puts current timestamp on all created files, even unchanged ones [#219]
	* bnfc is now more accepting about border-line terminals [#149]
	* Improved error messages [#144] in particular on undefined categories [#151]
	* C: Emit correct function prototypes [#185]
	* C++: Fix buffer overrun in pretty printer [#242]
	* C++: Fix regression introduced in 2.8 in Skeleton.H [#164]
	* C++: Replace `%name-prefix` with `%define api.prefix` in bison files [#181]
	* C++: Fix a bug that appeared if you had a category named "List"
	* C, C++: Add usage output to the test program [#141]
	* C, C++: Fix a bug in the parser file when using -p [#172]
	* C, C++, OCaml, Java: Accept ' or " as comment delimiters [#146]
	* Haskell: Generated code mostly hlint-warning free
	* Haskell: Small fixes [#166,#170,#222]
	* Java: Add an experimental ANTLR4 backend [#155]
	* Java: Add support for passing line numbers to parser [#217,#224,#226]
	* OCaml: Reserved symbols now have a higher precedence than predefined
	  tokens as in Haskell
	* Some updates of the documentation [#211,#223]
	* And various small fixes [#139,#159,#195,#201,#215]

2.8.1 Grégoire Détrez <gregoire.detrez@gu.se>  February 2016
	* Fix compatibility with GHC 7.10.2 and Alex 3.14
	* Fixed #160

2.8 Grégoire Détrez <gregoire.detrez@gu.se>  May 2015
	* Builds with ghc 7.10.1
	* Add support for JFlex (java)
	* Add an option to generate files in an other directory
	* Add an experimental option that turns the AST into a parametrized
	  functor (in Haskell only)
	* New pygment backend to generate syntax highlighters
	* Bug fixes

2.7.1 Grégoire Détrez <gregoire.detrez@gu.se> October 2014
	* Generated haskell code is now warning free
	* Removed unused terminal in happy